# aspamd

./: AUTHORS  Makefile.am  Makefile.ia32  Makefile.oe  NEWS  README  aspamd.conf  configure.ac  doxygen.cfg  test_requests  valgrind.sh
contrib/: kas.pc
src/: aspamd.c  aspamd.h  assassin.c  assassin.h  errors.h  kas.c  kas.h  logging.c  logging.h  net.h  pairs.c  pairs.h  parser.c  parser.h  reactor.c  reactor.h  server.c  server.h  session.c  session.h
tests/: parser_test.c  spam_samples.c  spam_samples.h  spamd_test.c  spamd_test.h
