AC_PREREQ([2.59])

AC_INIT([advanced spam filtering daemon], [0.1.0], [johnsmith@yahoo.com], [aspamd], [])
AM_INIT_AUTOMAKE([subdir-objects])

AC_PROG_CC
AC_PROG_CC_STDC
AM_PROG_CC_C_O

PKG_CHECK_MODULES([DEPS], [glib-2.0 >= 2.24])

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
